examples/syntax_errors/unexpected_indent.py
for i, animal in enumerate(['Monkey', 'Donkey', 'Platypus']):
    print(i)
      print(animal)  # IndentationError: unexpected indent
